--- a/vanillajs/package.json
+++ b/vanillajs/package.json
@@ -5,10 +5,14 @@
     "babel-core": "^6.24.1",
     "babel-loader": "^6.4.1",
     "babel-preset-env": "^1.3.3",
+    "css-loader": "^0.28.0",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "node-sass": "^4.5.2",
+    "sass-loader": "^6.0.3",
     "webpack": "^2.3.3",
     "webpack-dev-server": "^2.4.2"
   },
   "scripts": {
-    "build": "node_moduled/.bin/webpack"
+    "build": "node_modules/.bin/webpack -p"
   }
 }
