--- a/vanillajs/package.json
+++ b/vanillajs/package.json
@@ -9,10 +9,12 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "node-sass": "^4.5.2",
     "sass-loader": "^6.0.3",
+    "style-loader": "^0.16.1",
     "webpack": "^2.3.3",
     "webpack-dev-server": "^2.4.2"
   },
   "scripts": {
-    "build": "node_modules/.bin/webpack -p"
+    "build": "node_modules/.bin/webpack -p",
+    "watch": "node_modules/.bin/webpack --watch"
   }
 }
